# django-welkin

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  versioning.yml
django_welkin/: admin.py  apps.py  asgi.py  baker_recipes.py  conftest.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
django_welkin/cassettes/: ChatWebhookTests.test_chat.yaml
django_welkin/management/commands/: welkin_load_configuration.py  welkin_sync_models.py
django_welkin/migrations/: 0001_initial.py  0002_alter_configuration_id_alter_webhookmessage_id.py  0003_user_email_alter_configuration_id_and_more.py  0004_alter_configuration_id_alter_webhookmessage_id.py
django_welkin/models/: __init__.py  api.py  base.py  calendar.py  cdt.py  chat.py  configuration.py  patient.py  user.py  webhook.py
docs/: conf.py  index.rst
scripts/: boot_django.py  make_migrations.py
tests/: baker_recipes.py  conftest.py  settings.py  test_app.py  test_chat_webhook.py  test_django_welkin.py  test_webhook.py  urls.py
tests/cassettes/: WebhookTests.test_calendar_event.yaml  WebhookTests.test_patient.yaml  test_calendar_event.yaml  test_cdt_record.yaml  test_chat.yaml  test_patient.yaml
