[tool.poetry]
name = "django-welkin"
version = "0.0.1-beta.1"
description = "A Django app interfacing with the Welkin API."
license = "GPL-3.0-or-later"
authors = ["Sam Morgan <sam@lightmatter.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/django-welkin/"
repository = "https://github.com/lightmatter/django-welkin"
documentation = "https://django-welkin.readthedocs.io/"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [{include = "django_welkin"}]

[tool.poetry.dependencies]
python = "^3.10"
welkin = "^0.0.6"
django-solo = "^2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Django = "^4.0.0"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
django-environ = "^0.9.0"
pytest = "^7.1.3"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
