[tool.poetry]
name = "django-welkin"
version = "0.0.1"
description = "A Django app interfacing with the Welkin API."
license = "GPL-3.0-or-later"
authors = [
    "Lightmatter Team <hello@lightmatter.com>",
    "Sam Morgan <sam@lightmatter.com>",
]
readme = "README.md"
homepage = "https://pypi.org/project/django-welkin/"
repository = "https://github.com/lightmatter/django-welkin"
documentation = "https://django-welkin.readthedocs.io/"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [{include = "django_welkin"}]

[tool.poetry.dependencies]
python = "^3.8"
welkin = ">=0.0.6,<0.0.8"
django-solo = "^2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Django = "^4.0.0"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
django-environ = "^0.9.0"
model-bakery = "^1.8.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
pytest-vcr = "^1.0.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 92
target-version = ['py38']
include = '\.pyi?$'
force-exclude = '''
(
  /migrations/
)
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = ["--reuse-db"]
env_files = [".env", ".env.example"]
